--- a/core64-kernel/x86_64-unknown-none-core64_os.json
+++ b/core64-kernel/x86_64-unknown-none-core64_os.json
@@ -16,7 +16,7 @@
   "position-independent-executables": false,
   "pre-link-args": {
     "ld.lld": [
-      "-T./core-kernel/linker.ld"
+      "-T./core64-kernel/linker.ld"
     ]
   },
   "post-link-args": {
