--- a/core64-loader/Cargo.toml
+++ b/core64-loader/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "core-loader"
+name = "core64-loader"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,5 +7,5 @@ edition = "2021"
 log = "0.4.22"
 uefi = { version = "0.30.0", features = ["logger", "global_allocator", "alloc"] }
 goblin = { version = "0.8.2", default-features = false, features = ["elf64", "elf32", "endian_fd"] }
-core-util = { path = "../core-util"}
+core64-util = { path = "../core64-util" }
 qemu_print = "0.1.0"
